// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders catalog 1`] = `
<div
  className="HeaderCatalog-root-28"
>
  <div
    className="HeaderCatalog-streamUserBlock-29"
  >
    <p
      className="HeaderCatalog-streamUserHello-30"
    >
       Hello, Ben A 
      <br />
      <span
        className="HeaderCatalog-streamUserVerification-32"
      >
        KYC VERIFICATED
      </span>
    </p>
    <div
      className="HeaderCatalog-streamUserPhoto-34"
    >
      <img
        alt=""
        src="user.png"
      />
    </div>
    <p
      className="HeaderCatalog-streamUserBallance-31"
    >
       764.23 DCB 
      <br />
      <span
        className="HeaderCatalog-streamUserBallDescr-33"
      >
        YOUR BALANCE
      </span>
    </p>
  </div>
</div>
`;

exports[`renders games 1`] = `
<div
  className="HeaderCatalog-root-21"
>
  <div
    className="HeaderCatalog-catalogUserBlock-22"
  >
    <p
      className="HeaderCatalog-catalogUserHello-23"
    >
       Hello, Ben A 
      <br />
      <span
        className="HeaderCatalog-catalogUserVerification-25"
      >
        KYC VERIFICATED
      </span>
    </p>
    <div
      className="HeaderCatalog-catalogUserPhoto-27"
    >
      <img
        alt=""
        src="user.png"
      />
    </div>
    <p
      className="HeaderCatalog-catalogUserBallance-24"
    >
       764.23 DCB 
      <br />
      <span
        className="HeaderCatalog-catalogUserBallDescr-26"
      >
        YOUR BALANCE
      </span>
    </p>
  </div>
  <div>
    Test
  </div>
</div>
`;

exports[`renders main 1`] = `
<header
  className="HeaderMain-root-1"
>
  <ul
    className="MenuNavigation-root-2"
  >
    <li
      className={undefined}
    >
      <div
        className="MenuNavigation-logout-11"
        onClick={[Function]}
      >
        Logout
      </div>
    </li>
    <li>
      <a
        className="MenuNavigation-headerMenuItem-3"
        href="/"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-4 MenuNavigation-dashboard-5"
        />
        <br />
         Dashboard
      </a>
    </li>
    <li>
      <a
        className="MenuNavigation-headerMenuItem-3"
        href="/"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-4 MenuNavigation-walletIcon-6"
        />
        <br />
         Wallet
      </a>
    </li>
    <li>
      <a
        className="MenuNavigation-headerMenuItem-3"
        href="/"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-4 MenuNavigation-shop-7"
        />
        <br />
         Shop
      </a>
    </li>
    <li>
      <a
        className="MenuNavigation-headerMenuItem-3"
        href="/games"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-4 MenuNavigation-games-8"
        />
        <br />
         Games
      </a>
    </li>
    <li>
      <a
        className="MenuNavigation-headerMenuItem-3"
        href="/"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-4 MenuNavigation-friends-9"
        />
        <br />
         Friends
      </a>
    </li>
    <li>
      <a
        className="MenuNavigation-headerMenuItem-3"
        href="/"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-4 MenuNavigation-settings-10"
        />
        <br />
         Settings
      </a>
    </li>
  </ul>
  <div
    className="UserBlock-root-12"
  >
    <div
      className="UserBlock-demoTitle-20"
    >
      DEMO VERSION
    </div>
    <div
      className="UserBlock-user-13"
    >
      <div
        className="UserBlock-userBlock-14"
      >
        <p
          className="UserBlock-userHello-15"
        >
           Hello, Ben A 
          <br />
          <span
            className="UserBlock-userVerification-16"
          >
            KYC VERIFICATED
          </span>
        </p>
        <div
          className="UserBlock-userPhoto-17"
        >
          <img
            alt=""
            src="user.png"
          />
        </div>
        <p
          className="UserBlock-userBallance-18"
        >
           dcb
          <br />
          <span
            className="UserBlock-userBallDescr-19"
          >
            YOUR BALANCE
          </span>
        </p>
      </div>
    </div>
  </div>
</header>
`;
